Module FadeToBlack added and Menu adjousted

--- a/3D Physics.vcxproj.filters
+++ b/3D Physics.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="ModuleLevel1.h">
       <Filter>Sources\Modules\Game</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleFadeToBlack.h">
+      <Filter>Sources\Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -145,6 +148,9 @@
     </ClCompile>
     <ClCompile Include="ModuleLevel1.cpp">
       <Filter>Sources\Modules\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleFadeToBlack.cpp">
+      <Filter>Sources\Modules</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
