--- a/3D Physics.vcxproj
+++ b/3D Physics.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="ModuleMultiplayer.h" />
     <ClInclude Include="ModulePhysics3D.h" />
     <ClInclude Include="ModulePlayer.h" />
+    <ClInclude Include="ModulePlayer2.h" />
     <ClInclude Include="ModuleRenderer3D.h" />
     <ClInclude Include="ModuleMenu.h" />
     <ClInclude Include="ModuleScene.h" />
@@ -116,6 +117,7 @@
     <ClCompile Include="ModuleMultiplayer.cpp" />
     <ClCompile Include="ModulePhysics3D.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
+    <ClCompile Include="ModulePlayer2.cpp" />
     <ClCompile Include="ModuleRenderer3D.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="ModuleMenu.cpp" />
