--- a/3D Physics.vcxproj.filters
+++ b/3D Physics.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClInclude Include="ModuleMultiplayer.h">
       <Filter>Sources\Modules\Multiplayer</Filter>
     </ClInclude>
+    <ClInclude Include="ModulePlayer2.h">
+      <Filter>Sources\Modules\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleAudio.cpp">
@@ -172,6 +175,9 @@
     </ClCompile>
     <ClCompile Include="ModuleMultiplayer.cpp">
       <Filter>Sources\Modules\Multiplayer</Filter>
+    </ClCompile>
+    <ClCompile Include="ModulePlayer2.cpp">
+      <Filter>Sources\Modules\Game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
