Code CLEANING and final adjoustments

--- a/3D Physics.vcxproj
+++ b/3D Physics.vcxproj
@@ -80,8 +80,7 @@
     <ClInclude Include="Light.h" />
     <ClInclude Include="ModuleCamera3D.h" />
     <ClInclude Include="ModuleCustom.h" />
-    <ClInclude Include="ModuleFadeToBlack.h" />
-    <ClInclude Include="ModuleLevel1.h" />
+    <ClInclude Include="ModuleStory.h" />
     <ClInclude Include="ModuleMultiplayer.h" />
     <ClInclude Include="ModulePhysics3D.h" />
     <ClInclude Include="ModulePlayer.h" />
@@ -111,9 +110,8 @@
     <ClCompile Include="ModuleAudio.cpp" />
     <ClCompile Include="ModuleCamera3D.cpp" />
     <ClCompile Include="ModuleCustom.cpp" />
-    <ClCompile Include="ModuleFadeToBlack.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
-    <ClCompile Include="ModuleLevel1.cpp" />
+    <ClCompile Include="ModuleStory.cpp" />
     <ClCompile Include="ModuleMultiplayer.cpp" />
     <ClCompile Include="ModulePhysics3D.cpp" />
     <ClCompile Include="ModulePlayer.cpp" />
